# tithe

./: Cargo.toml  README.md
scripts/: batch_input.sh
src/: main.rs
