[package]
name = "tithe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.4", features = ["derive"] }
csv = "1.2.2"
serde = { version = "1.0.188", features = ["derive"] }
time = { version = "0.3.29", features = ["serde"] }
